--- a/Resources/views/Shared/edit.html.twig
+++ b/Resources/views/Shared/edit.html.twig
@@ -114,7 +114,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset(frontendAsset('js/spin.min.js')) }}"></script>
-    <script type="text/javascript" src="{{ asset(frontendAsset('js/ModalWidget.js')) }}"></script>
+    <script type="text/javascript" src="{{ asset(frontendAsset('js/modal-widget.js')) }}"></script>
     <script type="text/javascript" src="{{ asset(frontendAsset('js/form-widget.js')) }}"></script>
     <script type="text/javascript">
 
