--- a/Resources/views/Checkout/index.html.twig
+++ b/Resources/views/Checkout/index.html.twig
@@ -1,5 +1,4 @@
 {% extends frontend() %}
-{% form_theme form 'bootstrap_3_layout.html.twig' %}
 
 {% block topnav %}
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -41,10 +40,10 @@
                     <div id="section-{{ section }}" class="panel-collapse collapse{% if i == 0 %} in{% endif %} section-body" role="tabpanel" aria-labelledby="heading-{{ section }}">
                         <div class="panel-body">
 
-                            {% if sectionData.fields is defined %}
+                            {% if sectionData.fields is defined and sectionData.form_view is defined %}
+                                {% form_theme sectionData.form_view 'bootstrap_3_layout.html.twig' %}
                                 {% for field in sectionData.fields %}
-                                    {# assuming this is a sub-form #}
-                                    {{ form_row(form.offsetGet(section).offsetGet(field)) }}
+                                    {{ form_row(sectionData.form_view.offsetGet(field)) }}
                                 {% endfor %}
                             {% elseif sectionData.template is defined %}
                                 {% include sectionData.template with sectionData %}
@@ -55,7 +54,7 @@
 
                                 </div>
                                 <div class="col-xs-4">
-                                    <a role="button" data-section="{{ section }}" data-next-section="{{ sectionData.next_section_id }}" class="btn btn-success form-control next-button {% if sectionData.final_step is defined %}final-step{% endif %}">Next</a>
+                                    <a role="button" data-section="{{ section }}" class="btn btn-success form-control next-button {% if sectionData.final_step is defined %}final-step{% endif %}">Next</a>
                                     <div class="text-center spinner" style="display:none;">
                                         <i class="fa fa-spinner fa-spin fa-3x fa-fw margin-bottom"></i>
                                     </div>
@@ -102,65 +101,5 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
-
-{% block javascripts %}
-
-    {{ parent() }}
-
-    <script src="{{ asset(frontendAsset('js/country-region-widget.js')) }}" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        var countryRegions = {{ country_regions|json_encode|raw }};
-        var countryRegionWidget = new CountryRegionWidget({
-            countryRegions: countryRegions
-        });
-    </script>
-
-    <script src="{{ asset(frontendAsset('js/checkout-widget.js')) }}" type="text/javascript"></script>
-
-    <script type="text/javascript">
-
-        {# todo: make the widget use less concrete variables, handle an array of object params instead #}
-        var container = $('#co-accordion');
-        var checkoutSections = {{ widget_sections|json_encode|raw }};
-        var formName = '{{ form_name }}';
-        var totalsDiscountsUrl = '{{ totals_discounts_url }}';
-        var totalsDiscountsSection = '{{ totals_discounts_section }}';
-        var confirmOrderUrl = '{{ confirm_order_url }}';
-        var confirmOrderModal = $('#confirm-order-modal');
-        var submitOrderUrl = '{{ submit_order_url }}';
-
-        var checkout = new CheckoutWidget({
-            container: container,
-            sections: checkoutSections,
-            formName: formName,
-            totalsDiscountsUrl: totalsDiscountsUrl,
-            totalsDiscountsSection: totalsDiscountsSection,
-            confirmOrderUrl: confirmOrderUrl,
-            confirmOrderModal: confirmOrderModal,
-            submitOrderUrl: submitOrderUrl
-        });
-
-    </script>
-
-    {% for section, sectionData in sections %}
-        {% if sectionData.js_template is defined %}
-            {% include sectionData.js_template with sectionData %}
-        {% endif %}
-    {% endfor %}
-
-    {% for javascript in javascripts %}
-        {% if javascript.url is defined %}
-            <script type="text/javascript" src="{{ javascript.url }}"></script>
-        {% elseif javascript.asset is defined %}
-            <script src="{{ asset(javascript.asset) }}" type="text/javascript"></script>
-        {% elseif javascript.js_template is defined and javascript.data is defined %}
-            {% include javascript.js_template with javascript.data %}
-        {% elseif javascript.js_template is defined %}
-            {% include javascript.js_template %}
-        {% endif %}
-    {% endfor %}
 
 {% endblock %}
