--- a/Resources/views/Checkout/totals_discounts_js.html.twig
+++ b/Resources/views/Checkout/totals_discounts_js.html.twig
@@ -1,127 +1,58 @@
-<script type="text/javascript">
-
-    var CartWidget = function(obj) {
-        this.containerEl = obj.containerEl;
-        this.url = obj.url;
-        this.attachEvents();
-        return this;
-    };
-
-    CartWidget.prototype = {
-        containerEl: {},
-        url: '',
-        attachEvents: function() {
-            var self = this;
-
-            // Note : need to assume here that the elements are constantly being re-populated with ajax html responses
-
-            // change qty on a cart item
-            // change shipping method
-            // change promo code, update
-
-            self.containerEl.on('change', 'input[name="shipping_method"]', function(){
-
-                self.containerEl.find('div.totals-container .spinner').show();
-
-                var code = $(this).val();
-
-                var values = {
-                    shipping_method: code
-                };
-
-                var updateUrl = '{{ path('cart_shipment_add') }}' + '?format=json';
-
-                $.ajax({
-                    url: updateUrl,
-                    method: 'POST',
-                    dataType: 'json',
-                    data: values
-                }).done(function(){
-                    self.render();
-                });
-            });
-
-            self.containerEl.on('change', 'select.multi-shipping', function(){
-
-                self.containerEl.find('div.totals-container .spinner').show();
-
-                var updateUrl = '{{ path('cart_shipment_add') }}' + '?format=json';
-
-                var postData = {};
-                $('select.multi-shipping').each(function(){
-                    var self = $(this);
-                    var name = self.attr('name');
-                    postData[name] = self.val();
-                });
-
-                $.ajax({
-                    url: updateUrl,
-                    method: 'POST',
-                    dataType: 'json',
-                    data: postData
-                }).done(function(){
-                    self.render();
-                });
-            });
-
-            self.containerEl.on('change', 'input.qty-input', function(){
-                self.updateCart();
-            });
-
-            self.containerEl.on('change', 'select.product-shipping', function(){
-                self.updateCart();
-            });
-
-        },
-        updateCart: function() {
-            var self = this;
-            // first gather all qty inputs, and their values
-
-            self.containerEl.find('div.totals-container .spinner').show();
-
-            var postData = {};
-            self.containerEl.find('input.qty-input').each(function(){
-                var qtyInput = $(this);
-                var key = qtyInput.attr('name');
-                postData[key] = qtyInput.val();
-            });
-
-            $('select.product-shipping').each(function(){
-                var self = $(this);
-                var name = self.attr('name');
-                postData[name] = self.val();
-            });
-
-            var updateUrl = '{{ path('cart_update_qtys') }}' + '?format=json';
-
-            $.ajax({
-                url: updateUrl,
-                method: 'POST',
-                dataType: 'json',
-                data: postData
-            }).done(function(){
-                self.render();
-            });
-        },
-        render: function() {
-            var self = this;
-            $.ajax({
-                url: self.url
-            }).done(function(html){
-                self.containerEl.find('div.panel-body div.container').replaceWith(html);
-            });
-
-            return self;
-        }
-    };
-
-</script>
+<script src="{{ asset(frontendAsset('js/cart-widget.js')) }}" type="text/javascript"></script>
 
 <script type="text/javascript">
-    var containerEl = $('div#section-totals_discounts');
-    var url = '{{ path('cart_checkout_totals_discounts') }}';
+$(function(){
+
+    var section = "{{ section }}";
+    accordion.addSection(section);
+
     var cartWidget = new CartWidget({
-        containerEl: containerEl,
-        url: url
+        containerEl: $('div#section-totals_discounts'),
+        url: '{{ path('cart_checkout_section', {'section':'totals_discounts', 'ajax':'1'}) }}',
+        updateShippingUrl: '{{ path('cart_shipment_add', {'format':'json'}) }}',
+        updateQtyUrl: '{{ path('cart_update_qtys', {'format':'json'}) }}'
     });
+
+    var containerEl = $('div#section-' + section);
+    var nextButton = containerEl.find('.next-button');
+    var postUrl = "{{ post_url }}";
+
+    nextButton.on('click', function(e){
+        var self = $(this);
+
+        self.hide();
+        self.siblings('.spinner').show();
+
+        containerEl.find('.has-error').removeClass('has-error');
+
+        var postData = {};
+        containerEl.find('input, select, textarea').each(function(e){
+            var input = $(this);
+            var name = input.attr('name');
+            postData[name] = input.val();
+        });
+
+        // send request
+        $.ajax({
+            url: postUrl,
+            dataType: 'json',
+            type: 'POST',
+            data: postData
+        }).error(function(jqxhr, status, errorThrown){
+
+            self.show();
+            self.siblings('.spinner').hide();
+
+        }).done(function(response){
+
+            self.show();
+            self.siblings('.spinner').hide();
+
+            if (typeof(response['success']) != 'undefined' && response.success == true) {
+                // show next section
+                accordion.closeAndOpenNextSection(section);
+            }
+        });
+    });
+});
 </script>
