--- a/Resources/views/CustomerAddress/index.html.twig
+++ b/Resources/views/CustomerAddress/index.html.twig
@@ -19,20 +19,24 @@
         <div class="col-sm-12">
             <table class="table table-striped table-bordered table-hover">
                 <tr>
-                    <th>ID</th>
                     <th>Name</th>
                     <th>City</th>
                     <th>Region</th>
                     <th>Country</th>
+                    <th>&nbsp;</th>
                 </tr>
                 {% if result.entities|length > 0 %}
                     {% for entity in result.entities %}
                     <tr>
-                        <td>{{ entity.id }}</td>
                         <td><a href="{{ path('customer_address_edit', {'id': entity.id}) }}">{{ entity.name }}</a></td>
                         <td>{{ entity.city }}</td>
                         <td>{{ entity.region }}</td>
                         <td>{{ entity.country_id }}</td>
+                        <td class="text-center">
+                            <a class="btn btn-default" rel="nofollow" href="{{ path('customer_address_delete', { 'id': entity.id }) }}">
+                                <i class="glyphicon glyphicon-remove"> </i>
+                            </a>
+                        </td>
                     </tr>
                     {% endfor %}
                 {% else %}
