--- a/Resources/views/Cart/index.html.twig
+++ b/Resources/views/Cart/index.html.twig
@@ -13,7 +13,7 @@
                         <th>Sku</th>
                         <th>Price</th>
                         <th>Qty</th>
-                        {% if is_multi_shipping_enabled and customerAddresses()|length > 0 %}
+                        {% if isMultiShippingEnabled() and customerAddresses()|length > 0 %}
                         <th>Address</th>
                         {% endif %}
                         <th>&nbsp;</th>
@@ -39,7 +39,7 @@
                             <td>{{ item.sku }}</td>
                             <td>{{ decorate(item.price) }}</td>
                             <td><input class="form-control" type="number" name="qty[{{ item.product_id }}]" value="{{ item.qty }}" /></td>
-                            {% if is_multi_shipping_enabled and customerAddresses()|length > 0 %}
+                            {% if isMultiShippingEnabled() and customerAddresses()|length > 0 %}
                             <td>
                                 <select name="product_address[{{ item.product_id }}]" class="form-control product-shipping">
                                 {% for address in customerAddresses() %}
@@ -81,7 +81,7 @@
     <div class="row">
         <div class="col-sm-6">
 
-        {% if is_discount_enabled %}
+        {% if isDiscountEnabled() %}
             <div>
                 <form role="form" method="post" action="{{ path('cart_add_discount') }}">
                     <table class="table table-striped table-bordered table-hover">
@@ -105,7 +105,7 @@
             </div>
         {% endif %}
 
-        {% if is_shipping_enabled %}
+        {% if isShippingEnabled() %}
 
             <div>
                 <form role="form" method="post" action="{{ path('cart_shipment_add') }}">
@@ -124,7 +124,7 @@
                     <tr>
                         <td>{{ addressLabel(address_id) }}</td>
                         <td class="text-center">
-                            <select name="shipping_methods[{{ src_address_key }}][{{ address_id }}]" class="form-control">
+                            <select {% if isMultiShippingEnabled() %}name="shipping_methods[{{ src_address_key }}][{{ address_id }}]"{% else %}name="shipping_method"{% endif %} class="form-control">
                                 {% for method in methods %}
                                     <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id, src_address_key) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
                                 {% endfor %}
@@ -134,7 +134,6 @@
                     {% endif %}
                 {% endfor %}
             {% endfor %}
-
 
                         </tbody>
                         <tfoot>
