--- a/Resources/views/frontend-layout.html.twig
+++ b/Resources/views/frontend-layout.html.twig
@@ -159,10 +159,13 @@
     <div class="container">
         <div class="row alerts">
 
-            {% for state in ['info', 'warning', 'success', 'danger'] %}
+            {% for state in ['info', 'warning', 'success', 'error'] %}
                 {% for idx, flashMessage in app.session.flashbag.get(state) %}
-
-                    <div class="alert alert-{{ state }} alert-dismissible">
+                    {% set key = state %}
+                    {% if key == 'error' %}
+                        {% set key = 'danger' %}
+                    {% endif %}
+                    <div class="alert alert-{{ key }} alert-dismissible">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         {{ flashMessage }}
                     </div>
