--- a/Resources/views/Cart/index.html.twig
+++ b/Resources/views/Cart/index.html.twig
@@ -1,176 +1,24 @@
 {% extends frontend() %}
+{% block javascripts %}
+    {{ parent() }}
+
+    <script type="text/javascript">
+        var cartWidget = new CartWidget({
+            containerEl: $('div.totals-discounts-container'),
+            url: '{{ path('cart_view', {'ajax':'1'}) }}',
+            updateShippingUrl: '{{ path('cart_shipment_add') }}',
+            updateQtyUrl: '{{ path('cart_update_qtys') }}',
+            updateCallback: function() {
+                if (typeof minicartWidget != 'undefined') {
+                    minicartWidget.render(true);
+                }
+            }
+        });
+    </script>
+{% endblock %}
+
 {% block content %}
-
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 form-group">
-            <h1>Shopping Cart</h1>
-            <form action="{{ path('cart_update_qtys') }}" method="post">
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Sku</th>
-                        <th>Price</th>
-                        <th>Qty</th>
-                        {% if isMultiShippingEnabled() and customerAddresses()|length > 0 %}
-                        <th>Address</th>
-                        {% endif %}
-                        <th>&nbsp;</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% if cartItems()|length > 0 %}
-
-                        {% for item in cartItems() %}
-
-                        <tr>
-                            <td>
-                                {% if item.get('parent_options')|length > 0 %}
-                                <a href="{{ path('cart_product_view', { 'slug': item.parent_options.slug }) }}">
-                                    <img class="img-responsive" width="100" height="100" src="{{ asset(imagePath('product', item, 'list_grid')) }}" alt="{{ item.name }}" />
-                                </a>
-                                {% else %}
-                                <a href="{{ path('cart_product_view', { 'slug': item.slug }) }}">
-                                    <img class="img-responsive" width="100" height="100" src="{{ asset(imagePath('product', item, 'list_grid')) }}" alt="{{ item.name }}" />
-                                </a>
-                                {% endif %}
-                            </td>
-                            <td>{{ item.sku }}</td>
-                            <td>{{ decorate(item.price) }}</td>
-                            <td><input class="form-control" type="number" name="qty[{{ item.product_id }}]" value="{{ item.qty }}" /></td>
-                            {% if isMultiShippingEnabled() and customerAddresses()|length > 0 %}
-                            <td>
-                                <select name="product_address[{{ item.product_id }}]" class="form-control product-shipping">
-                                {% for address in customerAddresses() %}
-                                    <option value="{{ address.id }}"{% if item.get('customer_address_id') == address.id %} selected="selected"{% endif %}>{{ address.label }}</option>
-                                {% endfor %}
-                                </select>
-                            </td>
-                            {% endif %}
-                            <td class="text-center">
-                                <a class="btn btn-default" rel="nofollow" href="{{ path('cart_remove_item', { 'product_id': item.product_id }) }}">
-                                    <i class="glyphicon glyphicon-remove"> </i>
-                                </a>
-                            </td>
-                        </tr>
-
-                        {% endfor %}
-
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="6" class="text-right">
-                                <input type="submit" class="btn btn-primary" value="Update" name="update" />
-                            </td>
-                        </tr>
-                    </tfoot>
-                    {% else %}
-                    <tbody>
-                        <tr>
-                            <td colspan="6" align="center">Your Cart is Empty. <a href="{{ path('cart_products') }}">Click here to see Products</a></td>
-                        </tr>
-                    </tbody>
-                    {% endif %}
-                </table>
-            </form>
-        </div>
+    <div class="container totals-discounts-container">
+        {% include templatePath('Cart:partial.html.twig') %}
     </div>
-
-    {% if cartItems()|length > 0 %}
-    <div class="row">
-        <div class="col-sm-6">
-
-        {% if isDiscountEnabled() %}
-            <div>
-                <form role="form" method="post" action="{{ path('cart_add_discount') }}">
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead>
-                            <tr>
-                                <th colspan="2">Promo Code</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <input type="text" name="code" class="form-control" />
-                                </td>
-                                <td class="text-center">
-                                    <input type="submit" class="btn btn-primary" value="Submit" name="update_discount" />
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </form>
-            </div>
-        {% endif %}
-
-        {% if isShippingEnabled() %}
-
-            <div>
-                <form role="form" method="post" action="{{ path('cart_shipment_add') }}">
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th colspan="2">Shipping Methods</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-
-            {% for src_address_key, address_ids in cartAllShippingMethods() %}
-                {% for address_id, methods in address_ids %}
-                    {% if methods|length > 0 %}
-                    <tr>
-                        <td>{{ addressLabel(address_id) }}</td>
-                        <td class="text-center">
-                            <select {% if isMultiShippingEnabled() %}name="shipping_methods[{{ src_address_key }}][{{ address_id }}]"{% else %}name="shipping_method"{% endif %} class="form-control">
-                                {% for method in methods %}
-                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id, src_address_key) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            {% endfor %}
-
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <td colspan="2" class="text-right">
-                                <input type="submit" class="btn btn-primary" value="Update" name="update_shipping" />
-                            </td>
-                        </tr>
-                        </tfoot>
-                    </table>
-                </form>
-            </div>
-
-        {% endif %}
-        </div>
-        <div class="col-sm-6">
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th colspan="2">Totals</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for total in cartTotals() %}
-                    <tr>
-                        <th>{{ total.label }}</th>
-                        <th>{{ decorate(total.value) }}</th>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <div class="text-right">
-                <a class="btn btn-success btn-lg" href="{{ path('cart_checkout') }}">Proceed to Checkout</a>
-            </div>
-        </div>
-    </div>
-    {% endif %}
-
-</div>
 {% endblock %}
