--- a/Resources/views/Checkout/payment_methods_js.html.twig
+++ b/Resources/views/Checkout/payment_methods_js.html.twig
@@ -13,7 +13,7 @@
         buttonEl: $('div#section-payment_method a.next-button'),
         modalEl: $('div#confirm-order-modal'),
         postUrl: "{{ path('cart_checkout_update_section', {'section':'payment_method'}) }}",
-        confirmOrderUrl: "{{ path('cart_checkout_confirm_order') }}",
+        confirmOrderUrl: "{{ path('cart_view', {'ajax':'confirm'}) }}",
         submitOrderUrl: "{{ path('cart_checkout_submit_order') }}"
     });
 </script>
