--- a/Resources/views/frontend-layout.html.twig
+++ b/Resources/views/frontend-layout.html.twig
@@ -3,9 +3,9 @@
 {% block stylesheets %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ asset('bundles/mobilecartfrontend/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/mobilecartfrontend/font-awesome/css/font-awesome.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/mobilecartfrontend/css/styles.css') }}" rel="stylesheet">
+    <link href="{{ asset(frontendAsset('css/bootstrap.min.css')) }}" rel="stylesheet">
+    <link href="{{ asset(frontendAsset('font-awesome/css/font-awesome.css')) }}" rel="stylesheet">
+    <link href="{{ asset(frontendAsset('css/styles.css')) }}" rel="stylesheet">
 
 {% endblock %}
 
@@ -34,10 +34,11 @@
         App.serverURL = '{{ path('_home') }}';
     </script>
 
-    <script src="{{ asset('bundles/mobilecartfrontend/js/json2.js') }}"></script>
-    <script src="{{ asset('bundles/mobilecartfrontend/js/jquery-1.11.0.min.js') }}"></script>
-    <script src="{{ asset('bundles/mobilecartfrontend/js/underscore.js') }}"></script>
-    <script src="{{ asset('bundles/mobilecartfrontend/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset(frontendAsset('js/json2.js')) }}"></script>
+    <script src="{{ asset(frontendAsset('js/jquery-1.11.0.min.js')) }}"></script>
+    <script src="{{ asset(frontendAsset('js/underscore.js')) }}"></script>
+    <script src="{{ asset(frontendAsset('js/bootstrap.min.js')) }}"></script>
+    <script src="{{ asset(frontendAsset('js/cart-widget.js')) }}" type="text/javascript"></script>
 
     {% if javascripts is defined %}
     {% for javascript in javascripts %}
@@ -52,6 +53,30 @@
         {% endif %}
     {% endfor %}
     {% endif %}
+
+    <script type="text/javascript">
+        var minicartWidget = new CartWidget({
+            containerEl: $('div.cart-dropdown'),
+            url: '{{ path('cart_view', {'ajax':'mini'}) }}',
+            updateShippingUrl: '{{ path('cart_shipment_add') }}',
+            updateQtyUrl: '{{ path('cart_update_qtys') }}',
+            updateCallback: function() {
+                if (typeof cartWidget != 'undefined') {
+                    cartWidget.render(true);
+                }
+            }
+        });
+
+        minicartWidget.containerEl.parent().on({
+            'shown.bs.dropdown': function() { $(this).attr('closable', 'false'); },
+            'hide.bs.dropdown': function() { return $(this).attr('closable') == 'true'; }
+        });
+
+        minicartWidget.containerEl.parent().children().first().on({
+            'click': function() { $(this).parent().attr('closable', 'true'); }
+        });
+
+    </script>
 
 {% endblock %}
 
@@ -113,35 +138,7 @@
                                 <b class="caret"></b>
                             </a>
                             <div class="dropdown-menu cart-dropdown">
-                                {% for total in cartTotals() %}
-                                    <div class="row">
-                                        <div class="col-xs-6">{{ total.label }}</div>
-                                        <div class="col-xs-6">{{ decorate(total.value) }}</div>
-                                    </div>
-                                {% endfor %}
-
-                                {% for item in cartItems() %}
-                                    <div class="row">
-                                        <div class="col-xs-8">
-                                            {% if item.get('parent_options')|length > 0 %}
-                                                <a href="{{ path('cart_product_view', { 'slug': item.parent_options.slug }) }}">{{ item.get('name') }}</a>
-                                            {% else %}
-                                                <a href="{{ path('cart_product_view', { 'slug': item.slug }) }}">{{ item.get('name') }}</a>
-                                            {% endif %}
-
-                                        </div>
-                                        <div class="col-xs-4">{{ item.get('qty') }} x {{ decorate(item.get('price')) }}</div>
-                                    </div>
-                                {% endfor %}
-
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <a href="{{ path('cart_view') }}" class="btn btn-default">View Cart</a>
-                                    </div>
-                                    <div class="col-xs-6 text-right">
-                                        <a href="{{ path('cart_checkout') }}" class="btn btn-success">Checkout</a>
-                                    </div>
-                                </div>
+                                {% include templatePath('Cart:mini.html.twig') %}
                             </div>
                         </li>
 
